Fix loader centering on mobile

--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     padding: 100px 0;
     font-size: 1.2rem;
     color: #555;
